--- a/engagement/Info.plist
+++ b/engagement/Info.plist
@@ -36,6 +36,12 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>MGLMapboxAccessToken</key>
+	<string>pk.eyJ1IjoiZ3BqYXRmb3Vyc3F1YXJlIiwiYSI6ImNpdmluYmIxaDAxNGoyeWxiaWxrd2Y0Nm0ifQ.mUUlc-mTeHP3fI5f_ed50Q</string>
+	<key>MGLMapboxMetricsEnabledSettingShownInApp </key>
+	<true/>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Helps you find your treaure on the map.</string>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
